<resources>
    <string name="app_name">assignment7</string>
    <string name="meeting_calendar">Meeting Calendar</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="meeting_title">Meeting title</string>
    <string name="participants">Participants</string>
    <string name="start_date">Start date</string>
    <string name="start_time">Start time</string>
    <string name="meeting_duration">Meeting duration</string>
    <string name="submit">Submit</string>
    <string name="all">All</string>
    <string name="search_data">Search data</string>
</resources>